clear code, add code for BP3

--- a/My_C_Code/Scripts/BIM_test.ipynb
+++ b/My_C_Code/Scripts/BIM_test.ipynb
@@ -51,7 +51,7 @@
     }
    ],
    "source": [
-    "from Cabinet_Test import cmd\n",
+    "from Cabinet_CMD import cmd\n",
     "\n",
     "import sys\n",
     "sys.path.append(r'..\\AMDC-Firmware\\scripts')\n",
@@ -88,25 +88,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t> BIM init\n",
-      "['BIM initENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n",
-      "\t> BIM set_vdc 40.000000\n",
-      "['BIM set_vdc 40.000000', 'SUCCESS']\n",
-      "\t> BIM set_id 10.000000\n",
-      "['BIM set_id 10.000000', 'SUCCESS']\n",
+      "\t> bim init\n",
+      "['bim initENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n",
+      "\t> bim set_vdc 40.000000\n",
+      "['bim set_vdc 40.000000', 'SUCCESS']\n",
+      "\t> bim set_id 10.000000\n",
+      "['bim set_id 10.000000', 'SUCCESS']\n",
       "\t> hw pwm on\n",
       "['hw pwm on', 'SUCCESS']\n",
-      "\t> BIM enable_ctrl\n",
-      "['BIM enable_ctrl', 'SUCCESS']\n"
+      "\t> bim enable_ctrl\n",
+      "['bim enable_ctrl', 'SUCCESS']\n"
      ]
     }
    ],
    "source": [
-    "cmd.BIM_init()\n",
-    "cmd.BIM_set_Vdc(40)\n",
-    "cmd.BIM_set_id(10)\n",
+    "cmd.bim_init()\n",
+    "cmd.bim_set_Vdc(40)\n",
+    "cmd.bim_set_id(10)\n",
     "cmd.enable_pwm()\n",
-    "cmd.BIM_enable_ctrl()\n",
+    "cmd.bim_enable_ctrl()\n",
     "\n"
    ]
   },
@@ -117,20 +117,20 @@
    "outputs": [],
    "source": [
     "PI = 3.1415926\n",
-    "#cmd.BIM_set_theta_offset(-PI/12)\n",
+    "#cmd.bim_set_theta_offset(-PI/12)\n",
     "#logger.clear_all()\n",
     "\n",
-    "cmd.BIM_enable_ob()\n",
-    "cmd.BIM_enable_vctrl()\n",
-    "cmd.BIM_set_id(13.5)\n",
+    "cmd.bim_enable_ob()\n",
+    "cmd.bim_enable_vctrl()\n",
+    "cmd.bim_set_id(13.5)\n",
     "#logger.start()\n",
-    "#cmd.BIM_set_Fxy(0,3)\n",
-    "cmd.BIM_set_deltaxy(0, 0)\n",
-    "cmd.BIM_enable_levctrl()\n",
+    "#cmd.bim_set_Fxy(0,3)\n",
+    "cmd.bim_set_deltaxy(0, 0)\n",
+    "cmd.bim_enable_levctrl()\n",
     "#time.sleep(6)\n",
     "#logger.stop()\n",
-    "#cmd.BIM_set_id(10)\n",
-    "#data = logger.dump(file = 'BIM_data_start.csv')"
+    "#cmd.bim_set_id(10)\n",
+    "#data = logger.dump(file = 'bim_data_start.csv')"
    ]
   },
   {
@@ -185,16 +185,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.BIM_set_id(0)\n",
-    "cmd.BIM_set_ixy(0,0)\n",
+    "cmd.bim_set_id(0)\n",
+    "cmd.bim_set_ixy(0,0)\n",
     "logger.clear_all()\n",
-    "cmd.BIM_set_ixy(0,0)\n",
+    "cmd.bim_set_ixy(0,0)\n",
     "###################   COLLECT DATA   ####################\n",
     "# Clear the logger, then record data\n",
     "\n",
     "logger.start()\n",
-    "cmd.BIM_set_ixy(3,0)\n",
-    "#cmd.BIM_set_ixy(6, 0)\n",
+    "cmd.bim_set_ixy(3,0)\n",
+    "#cmd.bim_set_ixy(6, 0)\n",
     "#DATA IS BEING RECORDED\n",
     "time.sleep(0.02)\n",
     "\n",
@@ -207,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.BIM_set_w(00*PI/30)\n"
+    "cmd.bim_set_w(00*PI/30)\n"
    ]
   },
   {
@@ -218,7 +218,7 @@
    "source": [
     "f = 20\n",
     "w = 2*PI*f\n",
-    "cmd.BIM_set_injection_Fxy(w, 10)\n"
+    "cmd.bim_set_injection_Fxy(w, 10)\n"
    ]
   },
   {
@@ -227,7 +227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.BIM_disable_injection()"
+    "cmd.bim_disable_injection()"
    ]
   },
   {
@@ -241,19 +241,19 @@
     "    logger.stop()\n",
     "    w = 2*PI*f\n",
     "\n",
-    "    cmd.BIM_set_injection_Fxy(w, 5)\n",
+    "    cmd.bim_set_injection_Fxy(w, 5)\n",
     "    logger.clear_all()\n",
     "    logger.start()\n",
-    "#cmd.BIM_set_ixy(3,0)\n",
-    "#cmd.BIM_set_ixy(6, 0)\n",
+    "#cmd.bim_set_ixy(3,0)\n",
+    "#cmd.bim_set_ixy(6, 0)\n",
     "#DATA IS BEING RECORDED\n",
     "    time.sleep(0.05)\n",
     "    logger.stop()\n",
-    "    filename = 'BIM_data_2000RPM_stiff_f' + str(f)+'.csv'\n",
+    "    filename = 'bim_data_2000RPM_stiff_f' + str(f)+'.csv'\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
     "    data = logger.dump(file = filename)\n",
-    "cmd.BIM_disable_injection()\n",
-    "cmd.BIM_set_w(100*PI/30)"
+    "cmd.bim_disable_injection()\n",
+    "cmd.bim_set_w(100*PI/30)"
    ]
   },
   {
@@ -326,7 +326,7 @@
     "    logger.stop()\n",
     "\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'BIM_data_id_vd'+ str(i)+'.csv'\n",
+    "    filename = 'bim_data_id_vd'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)\n",
     "\n",
     " \n",
@@ -347,7 +347,7 @@
     "    logger.stop()\n",
     "\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'BIM_data_id_vx'+ str(i)+'.csv'\n",
+    "    filename = 'bim_data_id_vx'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)"
    ]
   },
@@ -359,13 +359,13 @@
    "source": [
     "logger.clear_all()\n",
     "logger.start()\n",
-    "#cmd.BIM_set_ixy(3,0)\n",
-    "#cmd.BIM_set_ixy(6, 0)\n",
+    "#cmd.bim_set_ixy(3,0)\n",
+    "#cmd.bim_set_ixy(6, 0)\n",
     "#DATA IS BEING RECORDED\n",
     "time.sleep(0.1)\n",
     "logger.stop()\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'BIM_data_3100RPM.csv')"
+    "data = logger.dump(file = 'bim_data_3100RPM.csv')"
    ]
   },
   {
@@ -386,7 +386,7 @@
    "source": [
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'BIM_data_Dis.csv')"
+    "data = logger.dump(file = 'bim_data_Dis.csv')"
    ]
   },
   {
@@ -421,10 +421,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cmd.BIM_enable_vctrl()\n",
+    "#cmd.bim_enable_vctrl()\n",
     "\n",
-    "cmd.BIM_set_w(1000*PI/30)\n",
-    "#cmd.BIM_set_id(10)"
+    "cmd.bim_set_w(1000*PI/30)\n",
+    "#cmd.bim_set_id(10)"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.BIM_set_ixy(0, 3)\n"
+    "cmd.bim_set_ixy(0, 3)\n"
    ]
   },
   {
@@ -442,8 +442,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.BIM_enable_vctrl()\n",
-    "cmd.BIM_set_id(6)\n"
+    "cmd.bim_enable_vctrl()\n",
+    "cmd.bim_set_id(6)\n"
    ]
   },
   {
@@ -452,8 +452,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.BIM_disable_levctrl()\n",
-    "cmd.BIM_disable_vctrl()"
+    "cmd.bim_disable_levctrl()\n",
+    "cmd.bim_disable_vctrl()"
    ]
   },
   {
@@ -523,7 +523,7 @@
     "file_name = max(list_of_files, key=os.path.getctime)\n",
     "print(file_name)\n",
     "\n",
-    "data = read_csv('BIM_data_3000RPM_2021-10-05_H13-M42-S47.csv')\n",
+    "data = read_csv('bim_data_3000RPM_2021-10-05_H13-M42-S47.csv')\n",
     "\n",
     "delta_x = data['delta_x'].tolist()\n",
     "delta_y = data['delta_y'].tolist()\n",
@@ -548,7 +548,7 @@
     "# View which variables are logged\n",
     "logger.info()\n",
     "#amdc.connect()\n",
-    "cmd.twin_enable_log()"
+    "cmd.c_loop_enable_log()"
    ]
   },
   {
@@ -597,7 +597,7 @@
    "outputs": [],
    "source": [
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'BIM_data_pos.csv')\n"
+    "data = logger.dump(file = 'bim_data_pos.csv')\n"
    ]
   },
   {
@@ -624,7 +624,7 @@
    "source": [
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'BIM_data_pos.csv')\n",
+    "data = logger.dump(file = 'bim_data_pos.csv')\n",
     "#data\n"
    ]
   },
@@ -687,7 +687,7 @@
     "time.sleep(0.5)\n",
     "logger.stop()\n",
     "\n",
-    "data = logger.dump(file = 'BIM_data_Idq.csv')\n",
+    "data = logger.dump(file = 'bim_data_Idq.csv')\n",
     "#data\n",
     "\n",
     "data.filter(regex=\"^va_ref|vb_ref|vc_ref$\").plot()\n",
@@ -757,7 +757,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "data = logger.dump(file = 'BIM_data.csv')\n",
+    "data = logger.dump(file = 'bim_data.csv')\n",
     "data\n"
    ]
   },
