--- a/My_C_Code/Scripts/BP3_SysID.ipynb
+++ b/My_C_Code/Scripts/BP3_SysID.ipynb
@@ -78,7 +78,7 @@
    ],
    "source": [
     "cmd.disable_pwm()\n",
-    "cmd.bim_deinit()"
+    "cmd.bp3_deinit()"
    ]
   },
   {
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "cmd.bim_init()\n"
+    "cmd.bp3_init()\n"
    ]
   },
   {
@@ -122,11 +122,11 @@
     }
    ],
    "source": [
-    "cmd.bim_set_Vdc_tq(100)\n",
-    "cmd.bim_set_Vdc_s1(80)\n",
-    "cmd.bim_set_id(2)\n",
-    "#cmd.bim_set_Vdc(60)\n",
-    "cmd.bim_enable_ctrl()\n",
+    "cmd.bp3_set_Vdc_tq(100)\n",
+    "cmd.bp3_set_Vdc_s1(80)\n",
+    "cmd.bp3_set_id(2)\n",
+    "#cmd.bp3_set_Vdc(60)\n",
+    "cmd.bp3_enable_ctrl()\n",
     "cmd.enable_pwm()\n"
    ]
   },
@@ -160,19 +160,19 @@
     }
    ],
    "source": [
-    "cmd.bim_enable_ob()\n",
-    "cmd.bim_enable_vctrl()\n",
+    "cmd.bp3_enable_ob()\n",
+    "cmd.bp3_enable_vctrl()\n",
     "#logger.clear_all()\n",
     "#logger.start()\n",
-    "cmd.bim_set_id(13.5)\n",
+    "cmd.bp3_set_id(13.5)\n",
     "\n",
-    "cmd.bim_set_deltaxy(0, 0)\n",
-    "cmd.bim_enable_levctrl()\n",
+    "cmd.bp3_set_deltaxy(0, 0)\n",
+    "cmd.bp3_enable_levctrl()\n",
     "#time.sleep(5)\n",
     "#logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "#data = logger.dump(file = 'bim_data_vdc_60_start.csv')"
+    "#data = logger.dump(file = 'bp3_data_vdc_60_start.csv')"
    ]
   },
   {
@@ -279,7 +279,7 @@
     "logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bim_data_test.csv')"
+    "data = logger.dump(file = 'bp3_data_test.csv')"
    ]
   },
   {
@@ -306,7 +306,7 @@
     }
    ],
    "source": [
-    "cmd.bim_set_w(000.0*PI/30)"
+    "cmd.bp3_set_w(000.0*PI/30)"
    ]
   },
   {
@@ -316,7 +316,7 @@
    "outputs": [],
    "source": [
     "x = 5e-7\n",
-    "cmd.bim_set_deltaxy(x, 0)"
+    "cmd.bp3_set_deltaxy(x, 0)"
    ]
   },
   {
@@ -354,7 +354,7 @@
     "logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bim_data_w000RPM_vdc_100_80_ob1.8_lev10Hz_ba1.8_M1.5_lpf_300_x_5e-7.csv')\n"
+    "data = logger.dump(file = 'bp3_data_w000RPM_vdc_100_80_ob1.8_lev10Hz_ba1.8_M1.5_lpf_300_x_5e-7.csv')\n"
    ]
   },
   {
@@ -367,7 +367,7 @@
     "logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bim_data_w2000RPM_vdc_60_distr.csv')\n"
+    "data = logger.dump(file = 'bp3_data_w2000RPM_vdc_60_distr.csv')\n"
    ]
   },
   {
@@ -429,7 +429,7 @@
     "    logger.stop()\n",
     "\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'bim_data_Vdc_100_80_id13_5_wrm_00rpm_wrm_inj_'+ str(i)+'.csv'\n",
+    "    filename = 'bp3_data_Vdc_100_80_id13_5_wrm_00rpm_wrm_inj_'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)"
    ]
   },
@@ -485,7 +485,7 @@
     "    logger.stop()\n",
     "\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'bim_data_vdc_50_w_00RPM_id_13_5_id_vd'+ str(i)+'.csv'\n",
+    "    filename = 'bp3_data_vdc_50_w_00RPM_id_13_5_id_vd'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)\n",
     "\n",
     "    \n",
@@ -502,7 +502,7 @@
     "    logger.stop()\n",
     "\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'bim_data_vdc_50_w_00RPM_id_13_5_ix_vx'+ str(i)+'.csv'\n",
+    "    filename = 'bp3_data_vdc_50_w_00RPM_id_13_5_ix_vx'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)\n"
    ]
   },
@@ -619,7 +619,7 @@
     "\n",
     "    logger.stop()\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'bim_data_vdc_100_80_w_000RPM_ob1.8_lev15Hz_ba1.8_M1.5_lpf_300_stiff_x_f_'+ str(i)+'.csv'\n",
+    "    filename = 'bp3_data_vdc_100_80_w_000RPM_ob1.8_lev15Hz_ba1.8_M1.5_lpf_300_stiff_x_f_'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)\n",
     "\n",
     "    amdc.cmd(\"inj const Fx_ref set 0\")\n",
@@ -636,7 +636,7 @@
     "    logger.stop()\n",
     "\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'bim_data_vdc_100_80_w_000RPM_ob1.8_lev15Hz_ba1.8_M1.5_lpf_300_stiff_y_f_'+ str(i)+'.csv'\n",
+    "    filename = 'bp3_data_vdc_100_80_w_000RPM_ob1.8_lev15Hz_ba1.8_M1.5_lpf_300_stiff_y_f_'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)\n"
    ]
   },
@@ -673,7 +673,7 @@
     "    # Clear the logger, then record data\n",
     "\n",
     "    logger.clear_all()\n",
-    "    cmd.bim_set_id(2)\n",
+    "    cmd.bp3_set_id(2)\n",
     "    vd_ref_chirp_gain     = 500 * 1e-3; # [m]\n",
     "    vd_ref_chirp_freq_min = i; # [Hz]\n",
     "    vd_ref_chirp_freq_max = i; # [Hz]\n",
@@ -690,7 +690,7 @@
     "    logger.stop()\n",
     "\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'bim_data_id_id'+ str(i)+'.csv'\n",
+    "    filename = 'bp3_data_id_id'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)\n",
     "\n",
     "    logger.unregister_all()\n",
@@ -701,7 +701,7 @@
     "    ###################   COLLECT DATA   ####################\n",
     "    # Clear the logger, then record data\n",
     "    logger.clear_all()\n",
-    "    cmd.bim_set_ixy(0,0)\n",
+    "    cmd.bp3_set_ixy(0,0)\n",
     "    amdc.cmd(\"inj const id_ref set 0\")\n",
     "    amdc.cmd(\"inj const iq_ref set 0\")\n",
     "    amdc.cmd(\"inj const iy_ref set 0\")\n",
@@ -714,7 +714,7 @@
     "    logger.stop()\n",
     "\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'bim_data_id_ix'+ str(i)+'.csv'\n",
+    "    filename = 'bp3_data_id_ix'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)"
    ]
   },
@@ -764,9 +764,9 @@
    ],
    "source": [
     "cmd.disable_pwm()\n",
-    "cmd.bim_disable_levctrl()\n",
-    "cmd.bim_disable_ob()\n",
-    "cmd.bim_disable_vctrl()\n",
+    "cmd.bp3_disable_levctrl()\n",
+    "cmd.bp3_disable_ob()\n",
+    "cmd.bp3_disable_vctrl()\n",
     "\n",
     "amdc.cmd(\"inj const vd_ref set 0\")\n",
     "amdc.cmd(\"inj const vq_ref set 0\")\n",
@@ -819,7 +819,7 @@
     "logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bim_data_id_vd150.csv')\n",
+    "data = logger.dump(file = 'bp3_data_id_vd150.csv')\n",
     "\n",
     "logger.unregister_all()\n",
     "#logger.register('Ia1_a Ia1_b Ia1_c Ib1_a Ib1_b Ib1_c Ia2_a Ia2_b Ia2_c Ib2_a Ib2_b Ib2_c', samples_per_sec = 1000, var_type = 'double')\n",
@@ -842,7 +842,7 @@
     "logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bim_data_id_vx150.csv')\n"
+    "data = logger.dump(file = 'bp3_data_id_vx150.csv')\n"
    ]
   },
   {
@@ -873,7 +873,7 @@
     "logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bim_data_id_vy200.csv')"
+    "data = logger.dump(file = 'bp3_data_id_vy200.csv')"
    ]
   },
   {
@@ -905,7 +905,7 @@
    "outputs": [],
    "source": [
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bim_data_id.csv')\n"
+    "data = logger.dump(file = 'bp3_data_id.csv')\n"
    ]
   },
   {
@@ -929,7 +929,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.bim_enable_ob()"
+    "cmd.bp3_enable_ob()"
    ]
   },
   {
@@ -938,7 +938,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.bim_set_Te(0.2)"
+    "cmd.bp3_set_Te(0.2)"
    ]
   },
   {
@@ -947,7 +947,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.bim_set_w(10)"
+    "cmd.bp3_set_w(10)"
    ]
   },
   {
@@ -956,8 +956,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.bim_set_ixy(0, 0)\n",
-    "cmd.bim_set_id(0)"
+    "cmd.bp3_set_ixy(0, 0)\n",
+    "cmd.bp3_set_id(0)"
    ]
   },
   {
@@ -1086,7 +1086,7 @@
    "outputs": [],
    "source": [
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bim_data_pos.csv')\n"
+    "data = logger.dump(file = 'bp3_data_pos.csv')\n"
    ]
   },
   {
@@ -1113,7 +1113,7 @@
    "source": [
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bim_data_pos.csv')\n",
+    "data = logger.dump(file = 'bp3_data_pos.csv')\n",
     "#data\n"
    ]
   },
@@ -1176,7 +1176,7 @@
     "time.sleep(0.5)\n",
     "logger.stop()\n",
     "\n",
-    "data = logger.dump(file = 'bim_data_Idq.csv')\n",
+    "data = logger.dump(file = 'bp3_data_Idq.csv')\n",
     "#data\n",
     "\n",
     "data.filter(regex=\"^va_ref|vb_ref|vc_ref$\").plot()\n",
@@ -1246,7 +1246,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "data = logger.dump(file = 'bim_data.csv')\n",
+    "data = logger.dump(file = 'bp3_data.csv')\n",
     "data\n"
    ]
   },
