--- a/My_C_Code/Scripts/Cabinet_test.ipynb
+++ b/My_C_Code/Scripts/Cabinet_test.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Cabinet_Test import cmd\n",
+    "from Cabinet_CMD import cmd\n",
     "import sys\n",
     "sys.path.append(r'..\\AMDC-Firmware\\scriptss')"
    ]
@@ -93,8 +93,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\t> BIM set_vdc 50.000000\n",
-      "['BIM set_vdc 50.000000', 'SUCCESS']\n",
+      "\t> bim set_vdc 50.000000\n",
+      "['bim set_vdc 50.000000', 'SUCCESS']\n",
       "\t> cabinet openloop_vsi_3_enable  3\n",
       "['cabinet openloop_vsi_3_enable  3', 'SUCCESS']\n",
       "\t> cabinet openloop_vsi_3 2 0.000000 5.000000\n",
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "cmd.BIM_set_Vdc(50)\n",
+    "cmd.bim_set_Vdc(50)\n",
     "cmd.openloop_vsi_3_enable(3)\n",
     "cmd.openloop_vsi_3(2,0,5)\n",
     "cmd.openloop_vsi_3(3,0,5)\n",
@@ -138,15 +138,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.init_twin_ctrl()\n",
-    "cmd.twin_sel_config(0)\n",
-    "cmd.twin_set_vdc(20)\n",
-    "cmd.twin_set_trq(0,0)\n",
-    "cmd.twin_set_s1(0,0)\n",
-    "cmd.twin_set_s2(0,0)\n",
-    "cmd.twin_set_freq(0)\n",
+    "cmd.init_c_loop_ctrl()\n",
+    "cmd.c_loop_sel_config(0)\n",
+    "cmd.c_loop_set_vdc(20)\n",
+    "cmd.c_loop_set_trq(0,0)\n",
+    "cmd.c_loop_set_s1(0,0)\n",
+    "cmd.c_loop_set_s2(0,0)\n",
+    "cmd.c_loop_set_freq(0)\n",
     "cmd.enable_pwm()\n",
-    "cmd.twin_enable_ctrl()"
+    "cmd.c_loop_enable_ctrl()"
    ]
   },
   {
@@ -155,8 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.twin_set_freq(100)\n",
-    "cmd.twin_enable_testloop()\n"
+    "cmd.c_loop_set_freq(100)\n",
+    "cmd.c_loop_enable_testloop()\n"
    ]
   },
   {
@@ -168,15 +168,15 @@
     "n=100\n",
     "i=0\n",
     "while i<n:\n",
-    "    cmd.twin_set_trq(0,0)\n",
-    "    cmd.twin_set_s1(0,0)\n",
-    "    cmd.twin_set_s2(0,0)\n",
+    "    cmd.c_loop_set_trq(0,0)\n",
+    "    cmd.c_loop_set_s1(0,0)\n",
+    "    cmd.c_loop_set_s2(0,0)\n",
     "    #time.sleep(0.1)\n",
-    "    cmd.twin_set_trq(0,3)\n",
+    "    cmd.c_loop_set_trq(0,3)\n",
     "    #time.sleep(0.1)\n",
-    "    cmd.twin_set_s1(1,0)\n",
+    "    cmd.c_loop_set_s1(1,0)\n",
     "    #time.sleep(0.1)\n",
-    "    cmd.twin_set_s2(1,0)\n",
+    "    cmd.c_loop_set_s2(1,0)\n",
     "    #time.sleep(0.1)\n",
     "    i+=1\n",
     "\n",
@@ -190,10 +190,10 @@
    "outputs": [],
    "source": [
     "\n",
-    "cmd.twin_set_freq(100)\n",
-    "cmd.twin_set_trq(0,3)\n",
-    "cmd.twin_set_s1(0,1)\n",
-    "cmd.twin_set_s2(1,0)\n",
+    "cmd.c_loop_set_freq(100)\n",
+    "cmd.c_loop_set_trq(0,3)\n",
+    "cmd.c_loop_set_s1(0,1)\n",
+    "cmd.c_loop_set_s2(1,0)\n",
     "\n"
    ]
   },
@@ -203,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.twin_disable_ctrl()\n",
+    "cmd.c_loop_disable_ctrl()\n",
     "cmd.disable_pwm()"
    ]
   },
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.twin_enable_ctrl()"
+    "cmd.c_loop_enable_ctrl()"
    ]
   },
   {
@@ -226,10 +226,10 @@
    },
    "outputs": [],
    "source": [
-    "cmd.twin_set_freq(10)\n",
-    "cmd.twin_set_trq(0,1)\n",
-    "cmd.twin_set_s1(0,1)\n",
-    "cmd.twin_set_s2(0,1)"
+    "cmd.c_loop_set_freq(10)\n",
+    "cmd.c_loop_set_trq(0,1)\n",
+    "cmd.c_loop_set_s1(0,1)\n",
+    "cmd.c_loop_set_s2(0,1)"
    ]
   },
   {
@@ -295,7 +295,7 @@
    },
    "outputs": [],
    "source": [
-    "cmd.twin_enable_log()\n",
+    "cmd.c_loop_enable_log()\n",
     "\n",
     "mapfile_path = find_mapfile(repo_dir)\n",
     "logger = AMDC_Logger(AMDC = amdc, mapfile = mapfile_path)\n",
@@ -430,7 +430,7 @@
    },
    "outputs": [],
    "source": [
-    "cmd.init_twin_ctrl()\n"
+    "cmd.init_c_loop_ctrl()\n"
    ]
   },
   {
@@ -469,9 +469,9 @@
    },
    "outputs": [],
    "source": [
-    "cmd.twin_set_trq(0,0)\n",
-    "cmd.twin_set_s1(0,0)\n",
-    "cmd.twin_set_s2(0,0)"
+    "cmd.c_loop_set_trq(0,0)\n",
+    "cmd.c_loop_set_s1(0,0)\n",
+    "cmd.c_loop_set_s2(0,0)"
    ]
   },
   {
@@ -480,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.twin_set_freq(100)\n",
+    "cmd.c_loop_set_freq(100)\n",
     "logger.unregister_all()\n",
     "logger.register('Itq_d_ref Itq_q_ref Itq_d Itq_q Is1_d_ref Is1_q_ref Is1_d Is1_q Is2_d_ref Is2_q_ref Is2_d Is2_q', samples_per_sec = 1000, var_type = 'double')\n",
     "\n",
@@ -489,24 +489,24 @@
     "\n",
     "logger.clear_all()\n",
     "logger.start()\n",
-    "cmd.twin_set_trq(0,0)\n",
-    "cmd.twin_set_s1(0,0)\n",
-    "cmd.twin_set_s2(0,0)\n",
+    "cmd.c_loop_set_trq(0,0)\n",
+    "cmd.c_loop_set_s1(0,0)\n",
+    "cmd.c_loop_set_s2(0,0)\n",
     "    #time.sleep(0.05)\n",
-    "cmd.twin_set_trq(0,3)\n",
+    "cmd.c_loop_set_trq(0,3)\n",
     "    #time.sleep(0.05)\n",
-    "cmd.twin_set_s1(1,0)\n",
+    "cmd.c_loop_set_s1(1,0)\n",
     "    #time.sleep(0.05)\n",
-    "cmd.twin_set_s2(1,0)\n",
-    "cmd.twin_set_trq(0,0)\n",
-    "cmd.twin_set_s1(0,0)\n",
-    "cmd.twin_set_s2(0,0)\n",
+    "cmd.c_loop_set_s2(1,0)\n",
+    "cmd.c_loop_set_trq(0,0)\n",
+    "cmd.c_loop_set_s1(0,0)\n",
+    "cmd.c_loop_set_s2(0,0)\n",
     "    #time.sleep(0.05)\n",
-    "cmd.twin_set_trq(0,3)\n",
+    "cmd.c_loop_set_trq(0,3)\n",
     "    #time.sleep(0.05)\n",
-    "cmd.twin_set_s1(1,0)\n",
+    "cmd.c_loop_set_s1(1,0)\n",
     "    #time.sleep(0.05)\n",
-    "cmd.twin_set_s2(1,0)\n",
+    "cmd.c_loop_set_s2(1,0)\n",
     "logger.stop()"
    ]
   },
@@ -516,14 +516,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#cmd.twin_set_freq(10)\n",
-    "cmd.twin_set_trq(0,3)\n",
-    "cmd.twin_set_s1(0,0)\n",
-    "#cmd.twin_set_s2(0,-1)\n",
+    "#cmd.c_loop_set_freq(10)\n",
+    "cmd.c_loop_set_trq(0,3)\n",
+    "cmd.c_loop_set_s1(0,0)\n",
+    "#cmd.c_loop_set_s2(0,-1)\n",
     "# DATA IS BEING RECORDED\n",
     "time.sleep(0.5)\n",
     "\n",
-    "cmd.twin_set_s1(1,0)\n",
+    "cmd.c_loop_set_s1(1,0)\n",
     "time.sleep(0.5)\n",
     "\n",
     "logger.stop()\n"
