correct BP3 code for system id

--- a/My_C_Code/Scripts/BP3_SysID.ipynb
+++ b/My_C_Code/Scripts/BP3_SysID.ipynb
@@ -45,8 +45,8 @@
     "sys.path.append(r'..\\AMDC-Firmware\\scripts')\n",
     "from AMDC import AMDC\n",
     "amdc = AMDC(port = 'COM13', cmdEcho = True, printOutput=True)\n",
-    "Vdc = 40\n",
-    "cmd = cmd(Vdc, amdc, debug = False) \n"
+    "Vdc = 60\n",
+    "cmd = cmd(Vdc, amdc, debug = False) "
    ]
   },
   {
@@ -55,7 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import matplotlib\n",
     "import time\n",
     "import pathlib as pl\n",
@@ -71,7 +70,21 @@
     "# View which variables are logged\n",
     "logger.info()\n",
     "#amdc.connect()\n",
-    "cmd.enable_log()"
+    "cmd.enable_log()\n",
+    "\n",
+    "logger.unregister_all()\n",
+    "#logger.register('wrm_ref wrm wrm_hf Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q delta_x delta_y', samples_per_sec = 5000, var_type = 'double')\n",
+    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q wrm_ref wrm wrm_hf va1_ref vb1_ref vc1_ref', samples_per_sec = 10000, var_type = 'double')\n",
+    "logger.register('wrm_ref wrm Itq_d_ref Itq_q_ref Itq_d Itq_q', samples_per_sec = 500, var_type = 'double')\n",
+    "\n",
+    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q va1_ref vb1_ref vc1_ref va2_ref vb2_ref vc2_ref', samples_per_sec = 1000, var_type = 'double')\n",
+    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q wrm_ref wrm', samples_per_sec = 5000, var_type = 'double')\n",
+    "#logger.register('delta_x delta_y F_x F_y' , samples_per_sec = 500, var_type = 'double')\n",
+    "#logger.register('wrm theta_rm theta_offset theta_e Iabc1_a Iabc1_b Iabc1_c va1_ref vb1_ref vc1_ref vd_ref vq_ref Itq_d Itq_q  Itq_d_ref Itq_q_ref' , samples_per_sec = 1000, var_type = 'double')\n",
+    "#logger.register('wrm theta_rm theta_offset theta_e ' , samples_per_sec = 1000, var_type = 'double')\n",
+    "#logger.register('theta_OL, theta_OL_raw' , samples_per_sec = 500, var_type = 'double')\n",
+    "# View which variables are logged\n",
+    "logger.info()"
    ]
   },
   {
@@ -90,16 +103,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "amdc.connect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "cmd.bp3_init()"
    ]
   },
@@ -109,11 +112,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.bp3_set_Vdc_tq(100)\n",
-    "cmd.bp3_enable_align()\n",
-    "\n",
+    "cmd.bp3_set_Vdc_tq(15)\n",
     "cmd.enable_pwm()\n",
-    "cmd.enable_log()"
+    "cmd.bp3_enable_align()"
    ]
   },
   {
@@ -122,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.bp3_set_Vdc_tq(100)\n",
+    "#cmd.bp3_set_Vdc_tq(340)\n",
     "cmd.bp3_set_Te(0)\n",
     "cmd.bp3_set_id(0)\n",
     "cmd.bp3_enable_ctrl()\n",
@@ -137,19 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.bp3_set_Te(0.0)\n",
-    "cmd.bp3_set_id(0.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "cmd.bp3_set_id(0.0)\n",
-    "cmd.bp3_set_Te(0.0)\n",
-    "cmd.bp3_enable_ob()\n"
+    "cmd.bp3_set_Te(0.0)"
    ]
   },
   {
@@ -158,6 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cmd.bp3_enable_ob()\n",
     "cmd.bp3_enable_vctrl()\n",
     "cmd.enable_log()\n",
     "PI = 3.141592653589793238462643383279\n",
@@ -170,38 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.bp3_set_w(000.0*PI/30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmd.bp3_set_id(0)\n",
-    "cmd.bp3_set_Te(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "logger.unregister_all()\n",
-    "#logger.register('wrm_ref wrm wrm_hf Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q delta_x delta_y', samples_per_sec = 5000, var_type = 'double')\n",
-    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q wrm_ref wrm wrm_hf va1_ref vb1_ref vc1_ref', samples_per_sec = 10000, var_type = 'double')\n",
-    "\n",
-    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q va1_ref vb1_ref vc1_ref va2_ref vb2_ref vc2_ref', samples_per_sec = 1000, var_type = 'double')\n",
-    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q wrm_ref wrm', samples_per_sec = 5000, var_type = 'double')\n",
-    "#logger.register('delta_x delta_y F_x F_y' , samples_per_sec = 500, var_type = 'double')\n",
-    "#logger.register('wrm theta_rm theta_offset theta_e Iabc1_a Iabc1_b Iabc1_c va1_ref vb1_ref vc1_ref vd_ref vq_ref Itq_d Itq_q  Itq_d_ref Itq_q_ref' , samples_per_sec = 1000, var_type = 'double')\n",
-    "#logger.register('wrm theta_rm theta_offset theta_e ' , samples_per_sec = 1000, var_type = 'double')\n",
-    "logger.register('theta ' , samples_per_sec = 1000, var_type = 'double')\n",
-    "# View which variables are logged\n",
-    "logger.info()\n"
+    "cmd.bp3_set_w(100.0*PI/30)"
    ]
   },
   {
@@ -211,20 +171,14 @@
    "outputs": [],
    "source": [
     "logger.clear_all()\n",
-    "logger.start()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "time.sleep(0.1)\n",
+    "logger.start()\n",
+    "time.sleep(1)\n",
+    "cmd.bp3_set_w(34000.0*PI/30)\n",
+    "time.sleep(15)\n",
     "logger.stop()\n",
-    "\n",
+    "cmd.bp3_set_w(1000.0*PI/30)\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bp3_data_170test_align.csv')"
+    "data = logger.dump(file = 'bp3_data_340Vdc_34000RPM.csv')"
    ]
   },
   {
@@ -259,19 +213,7 @@
    "outputs": [],
    "source": [
     "cmd.bp3_set_Vdc_tq(40)\n",
-    "cmd.bp3_set_Vdc_s1(40)\n",
-    "99"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "cmd.bp3_enable_align()\n",
-    "cmd.enable_pwm()"
+    "cmd.bp3_set_Vdc_s1(40)"
    ]
   },
   {
@@ -291,16 +233,7 @@
     "logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bp3_data_debug.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmd.bp3_set_Te(0.00)"
+    "data = logger.dump(file = 'bp3_data_debug.csv')"
    ]
   },
   {
@@ -310,7 +243,7 @@
    "outputs": [],
    "source": [
     "cmd.bp3_enable_ctrl()\n",
-    "cmd.bp3_set_id(0)\n"
+    "cmd.bp3_set_id(0)"
    ]
   },
   {
@@ -329,19 +262,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.disable_pwm()\n",
-    "cmd.set_vdc(40,5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
+    "cmd.set_vdc(340,3)\n",
     "cmd.openloop_vsi_3_enable(3)\n",
-    "cmd.openloop_vsi_3(3, 1, 2)\n",
+    "cmd.openloop_vsi_3(3, 1, 0.5)\n",
     "cmd.enable_pwm()"
    ]
   },
@@ -360,128 +283,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmd.bp3_enable_ob()\n",
-    "cmd.bp3_enable_ctrl()\n",
-    "cmd.bp3_set_id(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cmd.bp3_enable_vctrl()\n",
-    "#logger.clear_all()\n",
-    "#logger.start()\n",
-    "#cmd.bp3_set_id(13.5)\n",
-    "\n",
-    "#cmd.bp3_set_deltaxy(0, 0)\n",
-    "#cmd.bp3_enable_levctrl()\n",
-    "#time.sleep(5)\n",
-    "#logger.stop()\n",
-    "\n",
-    "####################   DUMP DATA AND PLOT   ####################\n",
-    "#data = logger.dump(file = 'bp3_data_vdc_60_start.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib\n",
-    "import time\n",
-    "import pathlib as pl\n",
-    "import sys\n",
-    "repo_dir = '..'                                      # CHANGE THIS TO YOUR REPO DIRECTORY\n",
-    "repo_dir = pl.Path(repo_dir)\n",
-    "\n",
-    "from AMDC_Logger import AMDC_Logger, find_mapfile\n",
-    "mapfile_path = find_mapfile(repo_dir)\n",
-    "logger = AMDC_Logger(AMDC = amdc, mapfile = mapfile_path)\n",
-    "logger.sync()\n",
-    "\n",
-    "# View which variables are logged\n",
-    "logger.info()\n",
-    "#amdc.connect()\n",
-    "cmd.enable_log()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logger.unregister_all()\n",
-    "#logger.register('wrm_ref wrm wrm_hf Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q delta_x delta_y', samples_per_sec = 5000, var_type = 'double')\n",
-    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q wrm_ref wrm wrm_hf va1_ref vb1_ref vc1_ref', samples_per_sec = 10000, var_type = 'double')\n",
-    "\n",
-    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q va1_ref vb1_ref vc1_ref va2_ref vb2_ref vc2_ref', samples_per_sec = 1000, var_type = 'double')\n",
-    "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q wrm_ref wrm', samples_per_sec = 5000, var_type = 'double')\n",
-    "#logger.register('delta_x delta_y F_x F_y' , samples_per_sec = 500, var_type = 'double')\n",
-    "logger.register('wrm theta_rm theta_e Iabc1_a Iabc1_b Iabc1_c va1_ref vb1_ref vc1_ref Itq_d Itq_q  Itq_d_ref Itq_q_ref' , samples_per_sec = 500, var_type = 'double')\n",
-    "# View which variables are logged\n",
-    "logger.info()\n",
-    "\n",
-    "logger.start()\n",
-    "time.sleep(1)\n",
-    "logger.stop()\n",
-    "\n",
-    "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bp3_data_Id2.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "logger.stop()\n",
-    "\n",
-    "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bp3_data_test.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PI = 3.141592653589793238462643383279\n",
-    "cmd.bp3_set_w(000.0*PI/30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "cmd.bp3_set_w(000.0*PI/30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = 5e-7\n",
-    "cmd.bp3_set_deltaxy(x, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "\n",
     "###################   COLLECT DATA   ####################\n",
     "# Clear the logger, then record data\n",
@@ -492,7 +293,7 @@
     "logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bp3_data.csv')\n"
+    "data = logger.dump(file = 'bp3_data.csv')"
    ]
   },
   {
@@ -501,20 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "logger.stop()\n",
-    "\n",
-    "####################   DUMP DATA AND PLOT   ####################\n",
-    "data = logger.dump(file = 'bp3_data_w2000RPM_vdc_60_distr.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.filter(regex=\"^wrm|wrm_ref|wrm_hf$\").plot()\n"
+    "data.filter(regex=\"^wrm|wrm_ref|wrm_hf$\").plot()"
    ]
   },
   {
@@ -735,7 +523,8 @@
     "\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
     "    filename = 'bp3_data_vdc_100_80_w_000RPM_ob1.8_lev15Hz_ba1.8_M1.5_lpf_300_stiff_y_f_'+ str(i)+'.csv'\n",
-    "    data = logger.dump(file = filename)"
+    "    data = logger.dump(file = filename)\n",
+    "    "
    ]
   },
   {
@@ -744,7 +533,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in [ 1]:\n",
+    "cmd.bp3_disable_vctrl()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in [150, 200, 250, 300]:\n",
     "    logger.stop()\n",
     "    #logger.unregister_all()\n",
     "    logger.clear_all()\n",
@@ -777,12 +575,12 @@
     "    vd_ref_chirp_period   = 50; # [sec]\n",
     "    logger.clear_all()\n",
     "    logger.unregister_all()\n",
-    "    amdc.cmd(\"inj const vd_ref set 0\")\n",
-    "    amdc.cmd(\"inj chirp vq_ref set {:.6f} {:.6f} {:.6f} {:.6f}\".format(vd_ref_chirp_gain, vd_ref_chirp_freq_min, vd_ref_chirp_freq_max, vd_ref_chirp_period))\n",
+    "    amdc.cmd(\"inj const vq_ref set 0\")\n",
+    "    amdc.cmd(\"inj chirp vd_ref set {:.6f} {:.6f} {:.6f} {:.6f}\".format(vd_ref_chirp_gain, vd_ref_chirp_freq_min, vd_ref_chirp_freq_max, vd_ref_chirp_period))\n",
     "\n",
     "    #logger.register('Ia1_a Ia1_b Ia1_c Ib1_a Ib1_b Ib1_c Ia2_a Ia2_b Ia2_c Ib2_a Ib2_b Ib2_c', samples_per_sec = 1000, var_type = 'double')\n",
     "    #logger.register('Itq_d Itq_q vd_ref vq_ref Is1_x Is1_y vx_ref vy_ref', samples_per_sec = 1000, var_type = 'double')\n",
-    "    logger.register('Itq_d Itq_q vd_ref vq_ref ', samples_per_sec = sampling, var_type = 'double')\n",
+    "    logger.register('Itq_d Itq_q vd_ref vq_ref vd_inject vq_inject', samples_per_sec = sampling, var_type = 'double')\n",
     "\n",
     "\n",
     "    ###################   COLLECT DATA   ####################\n",
@@ -796,7 +594,32 @@
     "\n",
     "    logger.stop()\n",
     "    ####################   DUMP DATA AND PLOT   ####################\n",
-    "    filename = 'bp3_data_vdc_60_000RPM_sysid_vq_'+ str(i)+'.csv'\n",
+    "    filename = 'bp3_data_vdc_100_000RPM_sysid_vd_'+ str(i)+'.csv'\n",
+    "    data = logger.dump(file = filename)\n",
+    "\n",
+    "    amdc.cmd(\"inj const vd_ref set 0\")\n",
+    "    amdc.cmd(\"inj chirp vq_ref set {:.6f} {:.6f} {:.6f} {:.6f}\".format(vd_ref_chirp_gain, vd_ref_chirp_freq_min, vd_ref_chirp_freq_max, vd_ref_chirp_period))\n",
+    "    logger.clear_all()\n",
+    "    logger.unregister_all()\n",
+    "    \n",
+    "\n",
+    "    #logger.register('Ia1_a Ia1_b Ia1_c Ib1_a Ib1_b Ib1_c Ia2_a Ia2_b Ia2_c Ib2_a Ib2_b Ib2_c', samples_per_sec = 1000, var_type = 'double')\n",
+    "    #logger.register('Itq_d Itq_q vd_ref vq_ref Is1_x Is1_y vx_ref vy_ref', samples_per_sec = 1000, var_type = 'double')\n",
+    "    logger.register('Itq_d Itq_q vd_ref vq_ref vd_inject vq_inject', samples_per_sec = sampling, var_type = 'double')\n",
+    "\n",
+    "\n",
+    "    ###################   COLLECT DATA   ####################\n",
+    "    # Clear the logger, then record data\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    logger.start()\n",
+    "    #DATA IS BEING RECORDED\n",
+    "    time.sleep(period*1.1)\n",
+    "\n",
+    "    logger.stop()\n",
+    "    ####################   DUMP DATA AND PLOT   ####################\n",
+    "    filename = 'bp3_data_vdc_100_000RPM_sysid_vq_'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)\n"
    ]
   },
