1-24-2022 revise BIM code

--- a/My_C_Code/Scripts/BP3_SysID.ipynb
+++ b/My_C_Code/Scripts/BP3_SysID.ipynb
@@ -36,16 +36,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t> cabinet init_cb\n",
+      "['cabinet init_cbENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n",
+      "\t> cabinet set_vdc_all 200.00000\n",
+      "['cabinet set_vdc_all 200.00000', 'SUCCESS']\n"
+     ]
+    }
+   ],
    "source": [
     "from Cabinet_CMD import cmd\n",
     "import sys\n",
     "sys.path.append(r'..\\AMDC-Firmware\\scripts')\n",
     "from AMDC import AMDC\n",
     "amdc = AMDC(port = 'COM13', cmdEcho = True, printOutput=True)\n",
-    "Vdc = 60\n",
+    "Vdc = 200\n",
     "cmd = cmd(Vdc, amdc, debug = False) "
    ]
   },
@@ -89,9 +100,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t> hw pwm off\n",
+      "['hw pwm off', 'SUCCESS']\n",
+      "\t> bp3 deinit\n",
+      "['bp3 deinit', 'SUCCESS']\n"
+     ]
+    }
+   ],
    "source": [
     "cmd.disable_pwm()\n",
     "cmd.bp3_deinit()"
@@ -99,20 +121,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t> bp3 init\n",
+      "['bp3 initENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n"
+     ]
+    }
+   ],
    "source": [
     "cmd.bp3_init()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t> bp3 set_vdc_tq 200.000000\n",
+      "['bp3 set_vdc_tq 200.000000', 'SUCCESS']\n",
+      "\t> hw pwm on\n",
+      "['hw pwm on', 'SUCCESS']\n",
+      "\t> bp3 enable_align\n",
+      "['bp3 enable_align', 'SUCCESS']\n"
+     ]
+    }
+   ],
    "source": [
-    "cmd.bp3_set_Vdc_tq(15)\n",
+    "cmd.bp3_set_Vdc_tq(200)\n",
     "cmd.enable_pwm()\n",
     "cmd.bp3_enable_align()"
    ]
